# Astar-with-pygame

./: .gitignore  README.md  astar.py  config.py  maze.txt  pyproject.toml  structures.py  ui.py
