[tool.poetry]
name = "astar"
version = "0.1.0"
description = ""
authors = ["Luca Vlad <lucavlad50@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
